--- a/style.css
+++ b/style.css
@@ -77,5 +77,16 @@ img{
     transition: 0.5s;
 }
 .image:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
+}
+
+.brand{
+    margin-top: 150px;
+    display: flex;
+    border-top: 2px solid #D9E0E8;
+    border-bottom: 2px solid #D9E0E8;
+}
+.brand img{
+    margin-right: 100px;
+    padding: 15px 0;
 }
